protocol-config/src/snapshots/protocol_config__snapshot_tests__Testnet_version_3.snap
---
source: protocol-config/src/lib.rs
expression: "ProtocolConfig::get_for_version(version, *chain)"
---
version: 3
feature_flags: {}
min_checkpoint_interval_ms: 200
consensus_max_transaction_size_bytes: 262144
consensus_max_transactions_in_block_bytes: 524288
consensus_max_num_transactions_in_block: 512
consensus_gc_depth: 60
consensus_commit_rate_estimation_window_size: 10
consensus_bad_nodes_stake_threshold: 30
mysticeti_num_leaders_per_round: 1
max_transactions_per_checkpoint: 20000
max_checkpoint_size_bytes: 31457280
buffer_stake_for_protocol_upgrade_bps: 5000
epoch_duration_ms: 86400000
validator_reward_allocation_bps: 7000
reward_slashing_rate_bps: 5000
model_min_stake: 1000000000
model_architecture_version: 1
model_reveal_slash_rate_bps: 5000
model_tally_slash_rate_bps: 9500
target_epoch_fee_collection: 1000000000
base_fee: 1000
write_object_fee: 300
initial_value_fee_bps: 10
min_value_fee_bps: 1
max_value_fee_bps: 50
fee_adjustment_rate_bps: 1250
target_models_per_target: 3
target_embedding_dim: 2048
target_initial_distance_threshold: 0.978
target_reward_allocation_bps: 8000
target_hits_per_epoch: 86400
target_hits_ema_decay_bps: 9000
target_difficulty_adjustment_rate_bps: 200
target_max_distance_threshold: 2
target_min_distance_threshold: 0.95
target_initial_targets_per_epoch: 20
target_submitter_reward_share_bps: 4975
target_model_reward_share_bps: 4975
target_claimer_incentive_bps: 50
submission_bond_per_byte: 65
max_submission_data_size: 1048576
execution_version: 2
